DevAccount/src/objects/account__c.object
<CustomObject>
    <fields>
        <fullName>Name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>id</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>scheduleupdate__c</fullName>
        <label>scheduleupdate</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>type</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>scheduleupdate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>